--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -13,7 +13,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ba
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
-ruleset=DIRECT,https://raw.githubusercontent.com/chenwjchen/demo/refs/heads/main/US2Node.list
+ruleset=2 美国拉斯维加斯2,https://raw.githubusercontent.com/chenwjchen/demo/refs/heads/main/US2Node.list
 ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
@@ -21,3 +21,4 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 
 enable_rule_generator=true
 overwrite_original_rules=true
+
